--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://atleastiwantto.github.io/blog/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'At least I wnat to'
 theme = 'photophobia'
