--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://atleastiwantto.github.io/blog/'
 languageCode = 'en-us'
-title = 'At least I wnat to'
+title = 'At least I want to'
 theme = 'photophobia'
